# vtkplotlib

./: .coveragerc  .gitignore  .readthedocs.yaml  .style.yapf  LICENSE.txt  MANIFEST.in  MANIFEST0.in  README.md  README.rst  TODO.md  conftest.py  contributing.md  setup.cfg  setup.py
data/: README.txt  attribution_card.html
docs/: Makefile  README.md  autobuild  make-reamde.md  make.bat  requirements.txt
docs/source/: Colors.rst  Contributing.rst  Extras.rst  Figures.rst  Images.rst  Interactive.rst  OnClick.rst  Plots.rst  auto_doc_gen.py  conf.py  history.rst  index.rst  lookup_example.rst  pick.rst  python_versions.odg  quickstart.rst  rst_prolog.txt  super_callbacks.rst
docs/source/static/: theme-overrides.css
history/: 2.1.0.rst  2.1.1.rst  README.md  v1.0.0.rst  v1.1.0.rst  v1.2.0.rst  v1.2.1.rst  v1.3.0.rst  v1.3.1.rst  v1.3.2.rst  v1.3.3.rst  v1.3.4.rst  v1.3.5.rst  v1.4.0.rst  v1.4.1.rst  v1.5.0.rst  v1.5.1.rst  v2.0.0.rst
tests/: .gitignore  README.md  _common.py  conftest.py  docs_code_blocks.py  get_data_files.py  test_colors.py  test_docstrings.py  test_figures.py  test_imageio.py  test_interactive.py  test_mesh_plot.py  test_misc.py  test_plots.py  test_plots_2d.py  test_polydata.py  test_polydata_based.py  test_qt.py  test_unicode_paths.py
tests/PyInstaller/: test.py  test.spec
tests/PyInstaller_/: frozen-pytest.py  frozen-pytest.spec
tests/temp/: .gitignore
vtkplotlib/: Arrow.py  BasePlot.py  Lines.py  MeshPlot.py  Polygon.py  ScalarBar.py  Scatter.py  Text.py  Text3D.py  __init__.py  __version__.py  _get_vtk.py  _history.py  _image_io.py  _interactive.py  _matplotlib_colors.py  _numpy_vtk.py  _version.py  _vtk.py  _vtk_errors.py  colors.py  data.py  fancy_figure.py  figures.py  geometry.py  image_io.py  interactive.py  numpy_vtk.py  nuts_and_bolts.py  plot_3d_vtk.py  render_window.py  unicode_paths.py  vtk_errors.py  vtk_image_reader.py
vtkplotlib/__PyInstaller/: hook-vtkplotlib.py
vtkplotlib/__pyinstaller/: __init__.py  hook-vtkmodules.qt.QVTKRenderWindowInteractor.py  hook-vtkplotlib.py
vtkplotlib/data/: __init__.py
vtkplotlib/data/icons/: icon_cropping.py
vtkplotlib/figures/: BaseFigure.py  QtFigure.py  __init__.py  figure.py  figure_manager.py  render_window.py
vtkplotlib/plots/: Arrow.py  BasePlot.py  Legend.py  Lines.py  MeshPlot.py  Polygon.py  ScalarBar.py  Scatter.py  Surface.py  Text.py  Text3D.py  __init__.py  imshow.py  polydata.py
vtkplotlib/tests/: __init__.py  _figure_contents_check.py  base.py  test_docstrings.py  test_extras.py  test_figures.py  test_mesh_plot.py  test_optional_dependency_fallbacks.py  test_plots.py
(+5 files in other folders)
