# -*- coding: utf-8 -*-
# =============================================================================
# Created on Sat May 30 18:05:55 2020
#
# @author: Brénainn Woodsend
#
# template.py
# What does this file do.
# Copyright (C) 2019-2020  Brénainn Woodsend
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
# =============================================================================


# Entry Points for PyInstaller
# ---------------------------------
#
# https://pyinstaller-sample-hook.readthedocs.io/en/latest/setup.cfg.html#hook-registration
#
[options.entry_points]
pyinstaller40 =
    # .. _hook_registration:
    #
    # **Hook registration**: This entry point refers to a function
    # that will be invoked with no parameters. It must return a
    # sequence of strings, each element of which provides an
    # additional absolute path to search for hooks. This is equivalent
    # to passing the ``additional-hooks-dir`` `command-line option
    # <https://pyinstaller.readthedocs.io/en/stable/usage.html#what-to-bundle-where-to-search>`_
    # to PyInstaller for each string in the sequence.
    #
    # In this project, the function is ``get_hook_dirs``.
    hook-dirs = vtkplotlib.__pyinstaller:get_hook_dirs

    # .. _tests_registration:
    #
    # **Test registration**: This entry point refers to a function
    # that will be invoked with no parameters. It must return a
    # sequence of strings, each element of which provides an
    # additional absolute path to a directory tree or to a Python
    # source file. These paths are then passed to `pytest
    # <https://docs.pytest.org>`_ for test discovery. This allows both
    # testing by this package and by PyInstaller, as discussed in
    # `index`.
    #
    # In this project, the function is ``get_PyInstaller_tests``.
    tests = pyi_hooksample.__pyinstaller:get_PyInstaller_tests
